	* Modified the 'WHCgiApplication::renderData()' method so that
	posts with an unknown command ID are handled by the default
	page handler (id=0) in 'src/wh/whcgiapplication.cpp'.
2015-12-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::sendUdpPacket()' method in 'wh/whcgipost.cpp'
	and 'wh/whcgipost.h'.
2015-12-20 Fred Gleason <fredg@paravelsystems.com>
	* Fix a bug in 'wh/whcgipost.cpp' that broke reading of IP parameters
	on RHEL 7.
2015-12-20 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'WHCgiPost::timezoneList()' and 'WHcurrentTimezone()'
	methods to work correctly under RHEL 7 in 'wh/whcgipost.cpp'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a timezone argument to the 'NTP' command.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'timezone' parameter to the 'WHCgiPost::sendNtpCommand()'
	method in 'src/wh/whcgipost.cpp' and 'src/wh/whcgipost.h'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'WHCgiPost:: ntpAddress()' method in
	'wh/whcgipost.cpp'.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'IP' webroot command to specify interface by number
	rather than by name.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'NTP' webroot command to allow hostnames to be
	used as arguments.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'WHCgiApplication' class to allow for proper ordering
	of menu items.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked menu layout in 'src/wh/whcgiapplication.cpp'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'exit()' method from the 'WHCgiPage' class to
	'WHCgiApplication'.
	* Created a 'cgiapp' global variable in 'src/wh/whcgiapplication.cpp'
	and 'src/wh/whcgiapplication.h'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/webhostd/upgrade.cpp' to kill the service
	command process after applying the upgrade.