@@ -81,3 +81,9 @@
 2015-12-29 Fred Gleason <fredg@paravelsystems.com>
 	* Added code in 'src/webhostd/upgrade.cpp' to kill the service
 	command process after applying the upgrade.
+2015-12-29 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHCgiApplication::redirect()' method in
+	'src/wh/whcgiapplication.cpp' and ''src/wh/whcgiapplication.h'.
+2015-12-29 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHCgiObject' class in 'wh/whcgiobject.cpp' and
+	'wh/whcgiobject.h'.
